# msxplay-js

./: .eslintrc.json  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CNAME  README.md  editor.html  gulpfile.js  index.html  package-lock.json  package.json  webpack.config.js
.github/workflows/: static.yml
cert/: README.md
css/: editor.css  lds-ripple.css  msxplay.css  style.css
demo/: COPYRIGHT.md  blank.mml  contrail.mml  es56.mml  es59.mgs  es59.mml  grider.mml  grider.mus  p52_arbl.mml  preview2.mml  psg_fm.mml  rom.mml  scc.mml
img/: ogp.sketch
js/: editor.js  index.js  lang-switcher.js  modal-player.js  query-parser.js
public/: editor.html  index.html  manifest.webmanifest  register-sw.js
public/demo/: contrail.mgs  grider.mgs
public/js/: ace-defines.js  editor.js  index.js  lang-switcher.js
src/: audio-player.js  entry.js  kss.js  kss2mp3.js  kss2wav.js  libmgsc.js  main.c  mgsc.js  msxplay-ui.js  msxplay.js  unmute.js  utils.js
src/obsolete/: stream-audio-play.js
src/player/: kss-decoder-worker.js  kss-player.js  renderer-worklet.js
www/: editor.html  index.html
www/demo/: es56.MGS  es56.mml  p52_arbl.mgs  p52_arbl.mml  preview.mml  psg_fm.mml  sx01v.mml
www/js/: editor.js
